--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Vishwajeet Mishra</h1>
+          <h1 class="name" title="Vishwajeet Mishra">Vishwajeet Mishra</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/vishwajeetmishra4" class="social-link">
+            <a href="https://github.com/vishwajeetmishra4" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
