--- a/index.html
+++ b/index.html
@@ -128,31 +128,31 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://github.com/vishwajeetmishra4" class="social-link">
+            <a href="https://github.com/vishwajeetmishra4" target="_blank" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.facebook.com/profile.php?id=100080983966580" class="social-link">
+            <a href="https://www.facebook.com/profile.php?id=100080983966580" target="_blank" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://twitter.com/vishwajeet_4" class="social-link">
+            <a href="https://twitter.com/vishwajeet_4" target="_blank" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/vishwajeet.mishra4/" class="social-link">
+            <a href="https://www.instagram.com/vishwajeet.mishra4/" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/vishwajeet-mishra4/" class="social-link">
+            <a href="https://www.linkedin.com/in/vishwajeet-mishra4/" target="_blank" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
