--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High School </h4>
+              <h4 class="h4 timeline-item-title">High School(Secondary) </h4>
 
               <span>2020</span>
 
               <p class="timeline-text">
-                My high school degree, obtained in 2020, showcases my commitment to education, personal growth, and lifelong learning.
+                My (Secondary) degree, obtained in 2020, showcases my commitment to education, personal growth, and lifelong learning.
               </p>
 
             </li>
