--- a/index.html
+++ b/index.html
@@ -414,14 +414,14 @@
               <span>2020</span>
 
               <p class="timeline-text">
-                My (Secondary) degree, obtained in 2020, showcases my commitment to education, personal growth, and lifelong learning.
+                My Secondary degree, obtained in 2020, showcases my commitment to education, personal growth, and lifelong learning.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Intermediate</h4>
+              <h4 class="h4 timeline-item-title">Intermediate(Senior Secondary)</h4>
 
               <span>2022</span>
 
