--- a/index.html
+++ b/index.html
@@ -711,6 +711,25 @@
               </a>
             </li>
 
+          <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://vishwajeetmishra4.github.io/Password-Generator/" target="_blank" >
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/password-generator.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Password Generator</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+
 
           </ul>
 
