--- a/index.html
+++ b/index.html
@@ -354,6 +354,26 @@
 
           </li>
 
+           </li>
+
+          <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/SQL.png" alt="SQL icon" width="100">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">SQL</h4>
+
+                <p class="service-item-text">
+                  I have mastered  the <strong>Intermediate</strong> complexities of SQL to manipulate and analyze data effectively.
+                  I have honed my SQL querying abilities, delving into more advanced topics such as subqueries, joins, and window functions. <br>
+                </p>
+              </div>
+
+            </li>
+
+
           </ul>
 
         </section>
