--- a/index.html
+++ b/index.html
@@ -529,6 +529,19 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">HTML </h5>
+                <data value="95">95%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 95%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">CSS</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -541,25 +554,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">CSS</h5>
-                <data value="75">75%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 75%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
                 <h5 class="h5">JavaScript</h5>
-                <data value="40">40%</data>
+                <data value="60">60%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
+                <div class="skill-progress-fill" style="width: 60%;"></div>
               </div>
 
             </li>
@@ -568,11 +568,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">C </h5>
-                <data value="70">70%</data>
+                <data value="95">95%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 95%;"></div>
               </div>
 
             </li>
@@ -581,11 +581,11 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Java</h5>
-                <data value="20">20%</data>
+                <data value="50">50%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 20%;"></div>
+                <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
             </li>
 
@@ -598,6 +598,18 @@
 
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 85%;"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">SQL</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
               </div>
             </li>
 
