--- a/index.html
+++ b/index.html
@@ -690,6 +690,25 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://vishwajeetmishra4.github.io/Captcha-Generator/" target="_blank" >
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/captcha-generator.png" alt="Captcha-Generator" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Captcha-Generator</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://vishwajeetmishra4.github.io/Todo-List/" target="_blank" >
 
                 <figure class="project-img">
@@ -697,7 +716,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Todo-list.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/Todo-list.png" alt="Todo-List" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Todo List</h3>
@@ -715,7 +734,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Calculator-dark.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/Calculator-dark.png" alt="Calculator" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Calculator(Dark & Light)</h3>
@@ -733,7 +752,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Digital-Clock.png" alt="fundo" loading="lazy">
+                  <img src="./assets/images/Digital-Clock.png" alt="Digital-Clock" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Digital Clock</h3>
@@ -751,7 +770,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/password-generator.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/password-generator.png" alt="Password-Generator" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Password Generator</h3>
@@ -760,7 +779,7 @@
 
               </a>
             </li>
-
+    
 
 
           </ul>
