--- a/index.html
+++ b/index.html
@@ -689,6 +689,25 @@
 
           <ul class="project-list">
 
+            
+            <li class="project-item  active" data-filter-item data-category="web applications">
+              <a href="https://vishwajeetmishra4.github.io/Snake-Game/" target="_blank" >
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Snake-Game.png" alt="Snake-Game" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Snake-Game</h3>
+
+                <p class="project-category">Web Application</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://vishwajeetmishra4.github.io/Captcha-Generator/" target="_blank" >
 
@@ -739,7 +758,7 @@
 
                 <h3 class="project-title">Calculator(Dark & Light)</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web Application</p>
 
               </a>
             </li>
