--- a/index.html
+++ b/index.html
@@ -698,10 +698,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Snake-Game.png" alt="Snake-Game" loading="lazy">
+                  <img src="./assets/images/snake-game.png" alt="Snake-Game" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Snake-Game</h3>
+                <h3 class="project-title">Snake-Game(Dark & Light)</h3>
 
                 <p class="project-category">Web Application</p>
 
