--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                   <img src="./assets/images/snake-game.png" alt="Snake-Game" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Snake-Game(Dark & Light)</h3>
+                <h3 class="project-title">Snake Game(Dark & Light)</h3>
 
                 <p class="project-category">Web Application</p>
 
@@ -719,7 +719,7 @@
                   <img src="./assets/images/captcha-generator1.png" alt="Captcha-Generator" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Captcha-Generator</h3>
+                <h3 class="project-title">Captcha Generator</h3>
 
                 <p class="project-category">Web development</p>
 
