--- a/index.html
+++ b/index.html
@@ -689,6 +689,24 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="web applications">
+              <a href="https://vishwajeetmishra4.github.io/Memory-Card-Game/" target="_blank" >
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Memory-Card-Game.png" alt="Memory Card Game" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Memory Card Game</h3>
+
+                <p class="project-category">Web Application</p>
+
+              </a>
+            </li>
+
             
             <li class="project-item  active" data-filter-item data-category="web applications">
               <a href="https://vishwajeetmishra4.github.io/Snake-Game/" target="_blank" >
@@ -698,7 +716,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/snake-game.png" alt="Snake-Game" loading="lazy">
+                  <img src="./assets/images/snake-game.png" alt="Snake Game" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Snake Game(Dark & Light)</h3>
@@ -716,7 +734,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/captcha-generator1.png" alt="Captcha-Generator" loading="lazy">
+                  <img src="./assets/images/captcha-generator1.png" alt="Captcha Generator" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Captcha Generator</h3>
@@ -735,7 +753,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Todo-list.png" alt="Todo-List" loading="lazy">
+                  <img src="./assets/images/Todo-list.png" alt="Todo List" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Todo List</h3>
@@ -771,7 +789,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Digital-Clock.png" alt="Digital-Clock" loading="lazy">
+                  <img src="./assets/images/Digital-Clock.png" alt="Digital Clock" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Digital Clock</h3>
@@ -789,7 +807,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/password-generator.png" alt="Password-Generator" loading="lazy">
+                  <img src="./assets/images/password-generator.png" alt="Password Generator" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Password Generator</h3>
