--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mishramangalam2@gmail.com" class="contact-link">mishramangalam2.com</a>
+              <a href="https://mishramangalam2@gmail.com/" class="contact-link">mishramangalam2.com</a>
             </div>
 
           </li>
