--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="mishramangalam5@gmail.com" class="form" data-form>
+          <form action="https://mishramangalam5@gmail.com/" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
