--- a/index.html
+++ b/index.html
@@ -689,6 +689,25 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://vishwajeetmishra4.github.io/Weight-Converter/" target="_blank" >
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Weight-Converter.png" alt="Weight Converter" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Weight Converter</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
+            
             <li class="project-item  active" data-filter-item data-category="web applications">
               <a href="https://vishwajeetmishra4.github.io/Memory-Card-Game/" target="_blank" >
 
