--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mishramangalam2@gmail.com" class="contact-link">mishramangalam2.com</a>
+              <a href="mailto:mishramangalam2@gmail.com" class="contact-link">mishramangalam2.com</a>
             </div>
 
           </li>
@@ -868,7 +868,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="mishramangalam5@gmail.com" class="form" data-form>
+          <form action="mailto:mishramangalam5@gmail.com" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
