--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         <section class="about-text">
           <p>
-            My name is Vishwajeet Mishra, and I am a passionate and ambitious first-year web developer student.<br>
+            My name is Vishwajeet Mishra, and I am a passionate and ambitious Second-year web developer student.<br>
             Through my studies and hands-on experience, I have gained a solid foundation in HTML, CSS, JavaScript, and other essential web technologies.<br>
           </p>
 
