--- a/index.html
+++ b/index.html
@@ -688,6 +688,24 @@
           </div>
 
           <ul class="project-list">
+            
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://vishwajeetmishra4.github.io/Qr-Code-Generator/" target="_blank" >
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Qr-Code-Generator.png" alt="Qr Code Generator" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Qr Code Generator</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://vishwajeetmishra4.github.io/Weight-Converter/" target="_blank" >
