--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
 
         <section class="about-text">
           <p>
-            My name is Vishwajeet Mishra, and I am a passionate and ambitious Second-year web developer student.<br>
-            Through my studies and hands-on experience, I have gained a solid foundation in HTML, CSS, JavaScript, and other essential web technologies.<br>
+            My name is Vishwajeet Mishra, and I am a passionate and ambitious Second-year Software Development student.<br>
+            Through my studies and hands-on experience, I have gained a solid foundation in Frontend as well as Backend and other essential technologies.<br>
           </p>
 
           <p>
-            As a lifelong learner, I am dedicated to staying up-to-date with the latest trends and advancements in web development.
+            As a lifelong learner, I am dedicated to staying up-to-date with the latest trends and technologies.
           
             I am always exploring new frameworks, libraries, and tools to improve my efficiency and deliver exceptional results.<br>
 
@@ -276,7 +276,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">css</h4>
+                <h4 class="h4 service-item-title">CSS</h4>
 
                 <p class="service-item-text">
                   I have successfully gained a <strong>Intermediate</strong> understanding of CSS, I have gained expertise in CSS selectors, properties, and layout techniques.<br>
